--- a/src/abountme.html
+++ b/src/abountme.html
@@ -7,14 +7,14 @@
           <link rel="stylesheet" href="/src/style/estilo-navbar.css">
           <link rel="stylesheet" href="/src/style/estilo-banner.css">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-          <title>Inicio</title>
+          <title>Acerca-De</title>
 </head>
 <body>
          <header class="navegacion-container">
-                   <nav class="navbar">
+                   <nav class="navbar"> 
                               <a class="a-nav-logo" href="/src/inicio.html">
                                         AMORE
-                                        <!-- <img class="logo" src="/logo.png" alt=""> -->
+                                        
                               </a>
                               <div class="navegacion">
                                        <div class="navegacion-item" >
